--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h1>Осьминожка навыков</h1>
+    <h1>Моя осьминожка навыков</h1>
 
     <div id="octopus_head">
         <div class="leg" id="english_language">
