--- a/index.html
+++ b/index.html
@@ -14,26 +14,129 @@
 
     <div id="octopus_head">
         <div class="leg" id="english_language">
-            <p class="text">Английский язык (5)</p>
+            <p class="text">Английский язык - 10</p>
         </div>
+
+
 
         <div class="leg" id="boldness">
-            <p class="text">Смелость (1.5)</p>
+            <p class="text">Смелость - 2</p>
         </div>
+
+        <div class="leg future" id="boldness">
+            <p class="text">4</p>
+        </div>
+
+
 
         <div class="leg" id="python">
-            <p class="text">Python (2.5)</p>
+            <p class="text">Python - 4</p>
         </div>
+
+        <div class="leg future" id="python">
+            <p class="text">5</p>
+        </div>
+
+
 
         <div class="leg" id="HTML">
-            <p class="text">HTML (2)</p>
+            <p class="text">HTML - 3</p>
         </div>
+
+        <div class="leg future" id="HTML">
+            <p class="text">4</p>
+        </div>
+
+
 
         <div class="leg" id="CSS">
-            <p class="text">CSS (2)</p>
+            <p class="text">CSS - 2</p>
         </div>
 
+        <div class="leg future" id="CSS">
+            <p class="text">4</p>
         </div>
+
+
+
+        <div class="leg" id="blender">
+            <p class="text">Blender (3D моделирование, ренеринг и т.д.) - 6</p>
+        </div>
+
+        <div class="leg future" id="blender">
+            <p class="text">7</p>
+        </div>
+
+
+
+        <div class="leg" id="rubiks_cube">
+            <p class="text">Собирать кубик рубика - 7 (20 секунд)</p>
+        </div>
+
+        <div class="leg future" id="rubiks_cube">
+            <p class="text">8</p>
+        </div>
+
+
+
+        <div class="leg" id="printing_3d">
+            <p class="text">3D printing - 4</p>
+        </div>
+
+        <div class="leg future" id="printing_3d">
+            <p class="text">7</p>
+        </div>
+
+
+
+        <div class="leg" id="food">
+            <p class="text">Нравиться вкусно покушать - 10</p>
+        </div>
+
+
+
+        <div class="leg" id="piano">
+            <p class="text">Играть на пианино - 5</p>
+        </div>
+
+        <div class="leg future" id="piano">
+            <p class="text">6</p>
+        </div>
+
+
+
+        <div class="leg" id="rubyonrails">
+            <p class="text">Ruby on rails - 0</p>
+        </div>
+
+        <div class="leg future" id="rubyonrails">
+            <p class="text">4</p>
+        </div>
+
+
+
+        <div class="leg empty" id="empty1">
+            <p class="text">Свободный слот</p>
+        </div>
+
+        <div class="leg empty" id="empty2">
+            <p class="text">Свободный слот</p>
+        </div>
+
+        <div class="leg empty" id="empty3">
+            <p class="text">Свободный слот</p>
+        </div>
+
+
+
+        <div class="now">
+            <p id="keytext">Сейчас</p>
+        </div>
+
+        <div class="now inayear">
+            <p id="keytext">через 1 год</p>
+        </div>
+
     </div>
     
 </body>
