--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="leg future" id="printing_3d">
-            <p class="text">7</p>
+            <p class="text">6</p>
         </div>
 
 
@@ -125,6 +125,10 @@
 
         <div class="leg empty" id="empty3">
             <p class="text">Свободный слот</p>
+        </div>
+
+        <div id="buffer_rect">
+            
         </div>
 
 
