--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
 
         <div class="now inayear">
-            <p id="keytext">через 1 год</p>
+            <p id="keytext">Через 1 год</p>
         </div>
 
         <div></div>
