--- a/index.html
+++ b/index.html
@@ -13,122 +13,38 @@
     <h1>Моя осьминожка навыков</h1>
 
     <div id="octopus_head">
-        <div class="leg" id="english_language">
-            <p class="text">Английский язык - 10</p>
-        </div>
-
-
-
-        <div class="leg" id="boldness">
-            <p class="text">Смелость - 2</p>
-        </div>
-
-        <div class="leg future" id="boldness">
-            <p class="text">4</p>
-        </div>
-
-
-
-        <div class="leg" id="python">
-            <p class="text">Python - 4</p>
-        </div>
-
-        <div class="leg future" id="python">
-            <p class="text">5</p>
-        </div>
-
-
-
-        <div class="leg" id="HTML">
-            <p class="text">HTML - 3</p>
-        </div>
-
-        <div class="leg future" id="HTML">
-            <p class="text">4</p>
-        </div>
-
-
-
-        <div class="leg" id="CSS">
-            <p class="text">CSS - 2</p>
-        </div>
-
-        <div class="leg future" id="CSS">
-            <p class="text">4</p>
-        </div>
-
-
-
-        <div class="leg" id="blender">
-            <p class="text">Blender (3D моделирование, ренеринг и т.д.) - 6</p>
-        </div>
-
-        <div class="leg future" id="blender">
-            <p class="text">7</p>
-        </div>
-
-
-
-        <div class="leg" id="rubiks_cube">
-            <p class="text">Собирать кубик рубика - 7 (20 секунд)</p>
-        </div>
-
-        <div class="leg future" id="rubiks_cube">
-            <p class="text">8</p>
-        </div>
-
-
-
-        <div class="leg" id="printing_3d">
-            <p class="text">3D printing - 4</p>
-        </div>
-
-        <div class="leg future" id="printing_3d">
-            <p class="text">6</p>
-        </div>
-
-
-
-        <div class="leg" id="food">
-            <p class="text">Нравиться вкусно покушать - 10</p>
-        </div>
-
-
-
-        <div class="leg" id="piano">
-            <p class="text">Играть на пианино - 5</p>
-        </div>
-
-        <div class="leg future" id="piano">
-            <p class="text">6</p>
-        </div>
-
-
-
-        <div class="leg" id="rubyonrails">
-            <p class="text">Ruby on rails - 0</p>
-        </div>
-
-        <div class="leg future" id="rubyonrails">
-            <p class="text">4</p>
-        </div>
-
-
-
-        <div class="leg empty" id="empty1">
-            <p class="text">Свободный слот</p>
-        </div>
-
-        <div class="leg empty" id="empty2">
-            <p class="text">Свободный слот</p>
-        </div>
-
-        <div class="leg empty" id="empty3">
-            <p class="text">Свободный слот</p>
-        </div>
 
         <div id="buffer_rect"></div>
 
+        <ul>
+                <li class="leg" id="english_language">Английский язык - 10</li>
+                <li class="leg" id="boldness">Смелость - 2</li>
+                <li class="leg" id="python">Python - 4</li>
+                <li class="leg" id="HTML">HTML - 3</li>
+                <li class="leg" id="CSS">CSS - 2</li>
+                <li class="leg" id="blender">Blender (3D моделирование, ренеринг и т.д.) - 6</li>
+                <li class="leg" id="rubiks_cube">Собирать кубик рубика - 7 (20 секунд)</li>
+                <li class="leg" id="printing_3d">3D printing - 4</li>
+                <li class="leg" id="food">Нравиться вкусно покушать - 10</li>
+                <li class="leg" id="piano">Играть на пианино - 5</li>
+                <li class="leg" id="rubyonrails">Ruby on rails - 0</li>
+                <li class="leg empty" id="empty1">Свободный слот</li>
+                <li class="leg empty" id="empty2">Свободный слот</li>
+                <li class="leg empty" id="empty3">Свободный слот</li>
+
+                <li class="leg future" id="boldness">4</li>
+                <li class="leg future" id="python">5</li>
+                <li class="leg future" id="HTML">4</li>
+                <li class="leg future" id="CSS">4</li>
+                <li class="leg future" id="blender">7</li>
+                <li class="leg future" id="rubiks_cube">6</li>
+                <li class="leg future" id="printing_3d">6</li>
+                <li class="leg future" id="piano">6</li>
+                <li class="leg future" id="rubyonrails">4</li>
+                <li class="leg empty" id="empty1">Свободный слот</li>
+                <li class="leg empty" id="empty2">Свободный слот</li>
+                <li class="leg empty" id="empty3">Свободный слот</li>
+        </ul>
 
         <div id="eye1"></div>
 
