--- a/index.html
+++ b/index.html
@@ -6,46 +6,53 @@
 	<body>
 		<h1>Моя осьминожка навыков</h1>
 
+		
 		<div class="octopus">
-			<div class="octopus_head">
-				<figure class="eyes" id="eye1"></figure>
-				<figure class="eyes" id="eye2"></figure>
-				<div class="mouth" id="octopus_head_clip_container">
-					<div id="mouthclip">
-						<div id="mouth"></div>
+			<div class="flex_container">
+
+				<div class="octopus_head">
+					<div class="face">
+						<figure class="eyes" id="eye1"></figure>
+						<figure class="eyes" id="eye2"></figure>
+						<div class="mouth " id="octopus_head_clip_container">
+							<div class="mouthclip">
+								<div class="mouth"></div>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="octopus_body">
-				<ul>
-					<li class="leg ten" id="english_language">Английский язык - 10</li>
-					<li class="leg two" id="boldness">Смелость - 2</li>
-					<li class="leg four" id="python">Python - 4</li>
-					<li class="leg three" id="HTML">HTML - 3</li>
-					<li class="leg two" id="CSS">CSS - 2</li>
-					<li class="leg six" id="blender">Blender (3D моделирование, ренеринг и т.д.) - 6</li>
-					<li class="leg seven" id="rubiks_cube">Собирать кубик рубика - 7 (20 секунд)</li>
-					<li class="leg four" id="printing_3d">3D printing - 4</li>
-					<li class="leg ten" id="food">Нравиться вкусно покушать - 10</li>
-					<li class="leg five" id="piano">Играть на пианино - 5</li>
-					<li class="leg empty" id="rubyonrails">Ruby on rails - 0</li>
-					<li class="leg empty" id="empty1">Свободный слот</li>
-					<li class="leg empty" id="empty2">Свободный слот</li>
-					<li class="leg empty" id="empty3">Свободный слот</li>
-				</ul>
+				<div class="octopus_body">
+					<ul>
+						<li class="leg ten" id="english_language">Английский язык - 10</li>
+						<li class="leg two" id="boldness">Смелость - 2</li>
+						<li class="leg four" id="python">Python - 4</li>
+						<li class="leg three" id="HTML">HTML - 3</li>
+						<li class="leg two" id="CSS">CSS - 2</li>
+						<li class="leg six" id="blender">Blender (3D моделирование, ренеринг и т.д.) - 6</li>
+						<li class="leg seven" id="rubiks_cube">Собирать кубик рубика - 7 (20 секунд)</li>
+						<li class="leg four" id="printing_3d">3D printing - 4</li>
+						<li class="leg ten" id="food">Нравиться вкусно покушать - 10</li>
+						<li class="leg five" id="piano">Играть на пианино - 5</li>
+						<li class="leg empty" id="rubyonrails">Ruby on rails - 0</li>
+						<li class="leg empty" id="empty1">Свободный слот</li>
+						<li class="leg empty" id="empty2">Свободный слот</li>
+						<li class="leg empty" id="empty3">Свободный слот</li>
+					</ul>
 
-				<!-- <ul>
-					<li class="leg future four" id="boldness">4</li>
-					<li class="leg future five" id="python">5</li>
-					<li class="leg future four" id="HTML">4</li>
-					<li class="leg future four" id="CSS">4</li>
-					<li class="leg future seven" id="blender">7</li>
-					<li class="leg future eight" id="rubiks_cube">8</li>
-					<li class="leg future six" id="printing_3d">6</li>
-					<li class="leg future six" id="piano">6</li>
-					<li class="leg future four" id="rubyonrails">4</li>
-				</ul> -->
+					<!-- <ul>
+						<li class="leg future four" id="boldness">4</li>
+						<li class="leg future five" id="python">5</li>
+						<li class="leg future four" id="HTML">4</li>
+						<li class="leg future four" id="CSS">4</li>
+						<li class="leg future seven" id="blender">7</li>
+						<li class="leg future eight" id="rubiks_cube">8</li>
+						<li class="leg future six" id="printing_3d">6</li>
+						<li class="leg future six" id="piano">6</li>
+						<li class="leg future four" id="rubyonrails">4</li>
+					</ul> -->
+				</div>
+
 			</div>
 		</div>
 
