Added decorative face

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 
 				<div class="octopus_head">
 					<div class="face">
-						<figure class="eyes" id="eye1"></figure>
-						<figure class="eyes" id="eye2"></figure>
-						<div class="mouth " id="octopus_head_clip_container">
-							<div class="mouthclip">
-								<div class="mouth"></div>
+						<div class="mouth">
+							<div class="teeth">
+								<div class="cover"></div>
 							</div>
 						</div>
 					</div>
