better leg length and removed id

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 
 				<div class="octopus_body">
 					<ul>
-						<li class="leg ten" id="english_language">Английский язык - 10</li>
-						<li class="leg two" id="boldness">Смелость - 2</li>
-						<li class="leg four" id="python">Python - 4</li>
-						<li class="leg three" id="HTML">HTML - 3</li>
-						<li class="leg two" id="CSS">CSS - 2</li>
-						<li class="leg six" id="blender">Blender (3D моделирование, ренеринг и т.д.) - 6</li>
-						<li class="leg seven" id="rubiks_cube">Собирать кубик рубика - 7 (20 секунд)</li>
-						<li class="leg four" id="printing_3d">3D printing - 4</li>
-						<li class="leg ten" id="food">Нравиться вкусно покушать - 10</li>
-						<li class="leg five" id="piano">Играть на пианино - 5</li>
-						<li class="leg empty" id="rubyonrails">Ruby on rails - 0</li>
-						<li class="leg empty" id="empty1">Свободный слот</li>
-						<li class="leg empty" id="empty2">Свободный слот</li>
-						<li class="leg empty" id="empty3">Свободный слот</li>
+						<li class="leg" style="width: 100%">Английский язык - 10</li>
+						<li class="leg" style="width: 20%">Смелость - 2</li>
+						<li class="leg" style="width: 40%">Python - 4</li>
+						<li class="leg" style="width: 30%">HTML - 3</li>
+						<li class="leg" style="width: 20%">CSS - 2</li>
+						<li class="leg" style="width: 60%">Blender (3D моделирование, рендеринг и т.д.) - 6</li>
+						<li class="leg" style="width: 70%">Собирать кубик рубика - 7 (20 секунд)</li>
+						<li class="leg" style="width: 40%">3D printing - 4</li>
+						<li class="leg" style="width: 100%">Нравиться вкусно покушать - 10</li>
+						<li class="leg" style="width: 50%">Играть на пианино - 5</li>
+						<li class="leg" style="width: 5%">Ruby on rails - 0</li>
+						<li class="leg" style="width: 5%">Свободный слот</li>
+						<li class="leg" style="width: 5%">Свободный слот</li>
+						<li class="leg" style="width: 5%">Свободный слот</li>
 					</ul>
 
 					<!-- <ul>
