--- a/index.html
+++ b/index.html
@@ -1,65 +1,128 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./style_V2.css">
 	</head>
 	<body>
-		<h1>Моя осьминожка навыков</h1>
+		<!-- Блок
+		Элемент
+		Модификатор -->
 
-		
+		<!-- <div class="ticket">
+			<h1 class="ticket__title">Title</h1>
+			<p class="ticket__desc">Description</p>
+		</div>
+
+
+		<div class="ticket ticket-offer">
+			<h1 class="ticket__title ticket__title-offer">Title with offer</h1>
+			<p class="ticket__desc">Description</p>
+		</div> -->
+
+
 		<div class="octopus">
-			<div class="flex_container">
+			<h1>Моя осьминожка навыков</h1>
+			<div class="octopus__flex_container">
 
-				<div class="octopus_head">
-					<div class="face">
-						<div class="mouth">
-							<div class="teeth">
-								<div class="cover"></div>
+				<div class="octopus__body">
+					<ul>
+						<li class="octopus__leg">
+							<span class="leg__title">Английский язык</span>
+							<span class="leg__current" style="width: 100%">Сейчас - 10</span>
+							<span class="leg__future" style="width: 100%">Через год - 10</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">Смелость</span>
+							<span class="leg__current" style="width: 20%">Сейчас - 2</span>
+							<span class="leg__future" style="width: 40%">Через год - 4</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">Python</span>
+							<span class="leg__current" style="width: 40%">Сейчас - 4</span>
+							<span class="leg__future" style="width: 45%">Через год - 4.5</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">HTML</span>
+							<span class="leg__current" style="width: 30%">Сейчас - 3</span>
+							<span class="leg__future" style="width: 45%">Через год - 4.5</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">CSS</span>
+							<span class="leg__current" style="width: 20%">Сейчас - 2</span>
+							<span class="leg__future" style="width: 45%">Через год - 4.5</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">Blender (3D моделирование, рендеринг и т.д.)</span>
+							<span class="leg__current" style="width: 50%">Сейчас - 5</span>
+							<span class="leg__future" style="width: 60%">Через год - 6</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">Собирать кубик рубика (сейчас 20 секунд)</span>
+							<span class="leg__current" style="width: 60%">Сейчас - 6</span>
+							<span class="leg__future" style="width: 70%">Через год - 7</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">3D printing</span>
+							<span class="leg__current" style="width: 40%">Сейчас - 4</span>
+							<span class="leg__future" style="width: 60%">Через год - 6</span>
+						</li>						
+						<li class="octopus__leg">
+							<span class="leg__title">Нравиться вкусно покушать</span>
+							<span class="leg__current" style="width: 100%">Сейчас - 10</span>
+							<span class="leg__future" style="width: 100%">Через год - 10</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">Играть на пианино</span>
+							<span class="leg__current" style="width: 50%">Сейчас - 5</span>
+							<span class="leg__future" style="width: 60%">Через год - 6</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">Ruby on rails</span>
+							<span class="leg__current" style="width: 0%">Сейчас - 0</span>
+							<span class="leg__future" style="width: 45%">Через год - 4.5</span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">Свободный слот</span>
+							<span class="leg__current" style="width: 0%"></span>
+							<span class="leg__future" style="width: 0%"></span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">Свободный слот</span>
+							<span class="leg__current" style="width: 0%"></span>
+							<span class="leg__future" style="width: 0%"></span>
+						</li>
+						<li class="octopus__leg">
+							<span class="leg__title">Свободный слот</span>
+							<span class="leg__current" style="width: 0%"></span>
+							<span class="leg__future" style="width: 0%"></span>
+						</li>
+						
+						
+						<!--li class="leg four" id="python">Python - 4</li>
+						<li class="leg three" id="HTML">HTML - 3</li>
+						<li class="leg two" id="CSS">CSS - 2</li>
+						<li class="leg six" id="blender">Blender (3D моделирование, ренеринг и т.д.) - 6</li>
+						<li class="leg seven" id="rubiks_cube">Собирать кубик рубика - 7 (20 секунд)</li>
+						<li class="leg four" id="printing_3d">3D printing - 4</li>
+						<li class="leg ten" id="food">Нравиться вкусно покушать - 10</li>
+						<li class="leg five" id="piano">Играть на пианино - 5</li>
+						<li class="leg empty" id="rubyonrails">Ruby on rails - 0</li>
+						<li class="leg empty" id="empty1">Свободный слот</li>
+						<li class="leg empty" id="empty2">Свободный слот</li>
+						<li class="leg empty" id="empty3">Свободный слот</li-->
+					</ul>
+				</div>
+
+				<div class="octopus__head hidden_mobile">
+					<div class="octopus__face">
+						<div class="octopus__mouth">
+							<div class="octopus__teeth">
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="octopus_body">
-					<ul>
-						<li class="leg" style="width: 100%">Английский язык - 10</li>
-						<li class="leg" style="width: 20%">Смелость - 2</li>
-						<li class="leg" style="width: 40%">Python - 4</li>
-						<li class="leg" style="width: 30%">HTML - 3</li>
-						<li class="leg" style="width: 20%">CSS - 2</li>
-						<li class="leg" style="width: 60%">Blender (3D моделирование, рендеринг и т.д.) - 6</li>
-						<li class="leg" style="width: 70%">Собирать кубик рубика - 7 (20 секунд)</li>
-						<li class="leg" style="width: 40%">3D printing - 4</li>
-						<li class="leg" style="width: 100%">Нравиться вкусно покушать - 10</li>
-						<li class="leg" style="width: 50%">Играть на пианино - 5</li>
-						<li class="leg" style="width: 5%">Ruby on rails - 0</li>
-						<li class="leg" style="width: 5%">Свободный слот</li>
-						<li class="leg" style="width: 5%">Свободный слот</li>
-						<li class="leg" style="width: 5%">Свободный слот</li>
-					</ul>
-
-					<!-- <ul>
-						<li class="leg future four" id="boldness">4</li>
-						<li class="leg future five" id="python">5</li>
-						<li class="leg future four" id="HTML">4</li>
-						<li class="leg future four" id="CSS">4</li>
-						<li class="leg future seven" id="blender">7</li>
-						<li class="leg future eight" id="rubiks_cube">8</li>
-						<li class="leg future six" id="printing_3d">6</li>
-						<li class="leg future six" id="piano">6</li>
-						<li class="leg future four" id="rubyonrails">4</li>
-					</ul> -->
-				</div>
-
 			</div>
 		</div>
-
-		<!-- <div class="now">
-			<p class="keytext">Сейчас</p>
-		</div>
-		<div class="now inayear">
-			<p class="keytext">Через 1 год</p>
-		</div> -->
-
 	</body>
 </html>
