BEM naming improved

--- a/index.html
+++ b/index.html
@@ -22,77 +22,77 @@
 
 
 		<div class="octopus">
-			<h1>Моя осьминожка навыков</h1>
+			<h1 class="octopus__title">Моя осьминожка навыков</h1>
 			<div class="octopus__flex_container">
 
 				<div class="octopus__body">
 					<ul>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Английский язык</span>
 							<span class="leg__current" style="width: 100%">Сейчас - 10</span>
 							<span class="leg__future" style="width: 100%">Через год - 10</span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Смелость</span>
 							<span class="leg__current" style="width: 20%">Сейчас - 2</span>
 							<span class="leg__future" style="width: 40%">Через год - 4</span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Python</span>
 							<span class="leg__current" style="width: 40%">Сейчас - 4</span>
 							<span class="leg__future" style="width: 45%">Через год - 4.5</span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">HTML</span>
 							<span class="leg__current" style="width: 30%">Сейчас - 3</span>
 							<span class="leg__future" style="width: 45%">Через год - 4.5</span>
 						</li>
-						<li class="octopus__leg">
-							<span class="leg__title">CSS</span>
+						<li class="octopus__leg leg">
+							<span class="leg__title leg">CSS</span>
 							<span class="leg__current" style="width: 20%">Сейчас - 2</span>
 							<span class="leg__future" style="width: 45%">Через год - 4.5</span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Blender (3D моделирование, рендеринг и т.д.)</span>
 							<span class="leg__current" style="width: 50%">Сейчас - 5</span>
 							<span class="leg__future" style="width: 60%">Через год - 6</span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Собирать кубик рубика (сейчас 20 секунд)</span>
 							<span class="leg__current" style="width: 60%">Сейчас - 6</span>
 							<span class="leg__future" style="width: 70%">Через год - 7</span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">3D printing</span>
 							<span class="leg__current" style="width: 40%">Сейчас - 4</span>
 							<span class="leg__future" style="width: 60%">Через год - 6</span>
 						</li>						
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Нравиться вкусно покушать</span>
 							<span class="leg__current" style="width: 100%">Сейчас - 10</span>
 							<span class="leg__future" style="width: 100%">Через год - 10</span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Играть на пианино</span>
 							<span class="leg__current" style="width: 50%">Сейчас - 5</span>
 							<span class="leg__future" style="width: 60%">Через год - 6</span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Ruby on rails</span>
 							<span class="leg__current" style="width: 0%">Сейчас - 0</span>
 							<span class="leg__future" style="width: 45%">Через год - 4.5</span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Свободный слот</span>
 							<span class="leg__current" style="width: 0%"></span>
 							<span class="leg__future" style="width: 0%"></span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Свободный слот</span>
 							<span class="leg__current" style="width: 0%"></span>
 							<span class="leg__future" style="width: 0%"></span>
 						</li>
-						<li class="octopus__leg">
+						<li class="octopus__leg leg">
 							<span class="leg__title">Свободный слот</span>
 							<span class="leg__current" style="width: 0%"></span>
 							<span class="leg__future" style="width: 0%"></span>
@@ -114,7 +114,7 @@
 					</ul>
 				</div>
 
-				<div class="octopus__head hidden_mobile">
+				<div class="octopus__head">
 					<div class="octopus__face">
 						<div class="octopus__mouth">
 							<div class="octopus__teeth">
